tdf#117217 ww8: export/import all cell backgrounds

... using TDefTableShd2nd and TDefTableShd3rd

P.S. There might be some other subtleties going on here.
> sprmTDefTableShdRaw:
> If a cell is set to ShdAuto in rgShd, the cell is
> not shaded. If a cell is set to ShdNil in rgShd, the cell is shaded
> according to the table style. By default, cells are shaded according
> to the table style.
(sprmTDefTableShdRaw not imported in LO, and ShdNil unknown)

> sprmTDefTableShd:
> If nFib is greater than 0x00D9 and the application understands
> table styles, then this Sprm MUST be ignored.
(aka NewShd from MSO 2000ish - never ignored by LO, and almost certainly
LO doesn't understand these table styles despite ?nFib == 0x0101? )

These seem to be very "late" modifications to the .doc format,
so likely very few things support the advanced features.
In any case, I haven't done anything novel here - just copying
what was done for template1 into template2 and template3,
so these subtleties are irrelevant for this patch.

Change-Id: Ic330179cf771a6f2531ed75dfb441fba10a04c7c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98856
Tested-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>