sw/source/filter/ww8/wrtww8.cxx
@@ -2683,18 +2683,48 @@ void WW8AttributeOutput::TableBackgrounds( ww8::WW8TableNodeInfoInner::Pointer_t
         m_rWW8Export.InsUInt16( aShd.GetValue() );
     }
 
+/*sprmTDefTableShdRaw:
+ * A DefTableShdOperand value that specifies the default shading for cells 1 up to 22 in the row,
+ * ... Cells 23 to 44 are shaded by sprmTDefTableShdRaw2nd,
+ * and cells 45 to 63 are shaded by sprmTDefTableShdRaw3rd.
+*/
     sal_uInt32 const aSprmIds[] { NS_sprm::sprmTDefTableShd,
-                                  NS_sprm::sprmTDefTableShdRaw };
-    sal_uInt8 nBoxes0 = rTabBoxes.size();
-    if (nBoxes0 > 21)
-        nBoxes0 = 21;
-
+                                  NS_sprm::sprmTDefTableShdRaw,
+                                  NS_sprm::sprmTDefTableShd2nd,
+                                  NS_sprm::sprmTDefTableShdRaw2nd,
+                                  NS_sprm::sprmTDefTableShd3rd,
+                                  NS_sprm::sprmTDefTableShdRaw3rd };
     for (sal_uInt32 m : aSprmIds)
     {
-        m_rWW8Export.InsUInt16( m );
-        m_rWW8Export.pO->push_back( static_cast<sal_uInt8>(nBoxes0 * 10) );
+        sal_uInt8 nStart = 0;
+        sal_uInt8 nStop = rTabBoxes.size();
+        switch ( m )
+        {
+            case NS_sprm::sprmTDefTableShd:
+            case NS_sprm::sprmTDefTableShdRaw:
+                if ( nStop > 21 )
+                    nStop = 22;
+                break;
+            case NS_sprm::sprmTDefTableShd2nd:
+            case NS_sprm::sprmTDefTableShdRaw2nd:
+                nStart = 22;
+                if ( nStop > 43 )
+                    nStop = 44;
+                break;
+            case NS_sprm::sprmTDefTableShd3rd:
+            case NS_sprm::sprmTDefTableShdRaw3rd:
+                nStart = 44;
+                if ( nStop > 62 )
+                    nStop = 63;
+                break;
+        }
+        if ( nStart >= nStop )
+            break;
 
-        for ( sal_uInt8 n = 0; n < nBoxes0; n++ )
+        m_rWW8Export.InsUInt16( m );
+        m_rWW8Export.pO->push_back( static_cast<sal_uInt8>((nStop-nStart) * 10) );
+
+        for ( sal_uInt8 n = nStart; n < nStop; n++ )
         {
             const SwTableBox * pBox1 = rTabBoxes[n];
             const SwFrameFormat * pFrameFormat = pBox1->GetFrameFormat();
